experiments/v1/EXPERIMENTS.md
# FRAMEWORK-V1 实验总览

> 本页由四个类型 INDEX 自动生成。请修改对应 INDEX 后运行 `python workflow/gtpj_workflow.py refresh-framework-view --version v1`，不要手工维护第二份结论。

| 类型 | 实验数 | 正式台账 |
|---|---:|---|
| 调参 | 0 | `tune/INDEX.md` |
| 消融 | 0 | `ablation/INDEX.md` |
| 创新 | 1 | `innovation/INDEX.md` |
| 确认 | 1 | `confirmation/INDEX.md` |

## 调参实验

| Experiment ID | Status | Question | Parameter matrix | Legacy reference | Directory | Promoted framework |
|---|---|---|---|---|---|---|
| - | none | 暂无 | - | - | - | - |

## 消融实验

| Experiment ID | Status | Question | Parameter matrix | Legacy reference | Directory | Promoted framework |
|---|---|---|---|---|---|---|
| - | none | 暂无 | - | - | - | - |

## 创新实验

| Experiment ID | Status | Question | Parameter matrix | Legacy reference | Directory | Promoted framework |
|---|---|---|---|---|---|---|
| `V1-INNOVATION-001` | legacy_owner_accepted_unconfirmed | CLIP-A-self 文本原型适配能否改善 v1 | `experiments/v1/innovation/INNOVATION-001_clip_a_self/PARAMETER_MATRIX.md` | `IDEA-0001/TRIAL-001/ATTEMPT-019` | `experiments/v1/innovation/INNOVATION-001_clip_a_self` | FRAMEWORK-V2 |

## 确认实验

| Experiment ID | Status | Question | Parameter matrix | Legacy reference | Directory | Promoted framework |
|---|---|---|---|---|---|---|
| `V1-CONFIRM-001` | completed | v1 seed=5 是否能独立复跑 | `experiments/v1/confirmation/CONFIRM-001_v1_seed5/PARAMETER_MATRIX.md` | `CONFIRM-001_v1_seed5/attempt-001` | `experiments/v1/confirmation/CONFIRM-001_v1_seed5` | - |
